<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:id="@+id/change"
        android:layout_marginTop="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/oldText" />

        <TextView
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/to" />

        <EditText
            android:id="@+id/newText"
            android:textStyle="bold"
            android:text="@string/newText"
            android:textSize="24sp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/checkBocxes"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >


        <CheckBox android:id="@+id/checkbox_buildprop"
            android:textSize="24sp"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buildprop"/>

        <CheckBox android:id="@+id/checkbox_bootlogo"
            android:textSize="24sp"
            android:checked="false"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bootlogo"/>

        <CheckBox android:id="@+id/checkbox_bootanimation"
            android:textSize="24sp"
            android:checked="false"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bootanimation"
            android:onClick="onCheckboxClicked"/>

        <CheckBox android:id="@+id/checkbox_watermark"
            android:textSize="24sp"
            android:checked="false"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/watermark" />

        <CheckBox android:id="@+id/checkbox_bin"
            android:textSize="24sp"
            android:checked="false"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bin" />

        <LinearLayout
            android:id="@+id/ll"
            android:layout_marginTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:textSize="16sp"
                android:typeface="monospace"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:text="@string/ll" />

            <TextView
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/nextCmd" />

            <TextView
                android:textSize="16sp"
                android:typeface="monospace"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/llCmd" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rw"
            android:layout_marginTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:textSize="16sp"
                android:typeface="monospace"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:text="@string/rw" />

            <TextView
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/nextCmd" />

            <TextView
                android:textSize="16sp"
                android:typeface="monospace"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/rwCmd" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ro"
            android:layout_marginTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:textSize="16sp"
                android:typeface="monospace"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:text="@string/ro" />

            <TextView
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/nextCmd" />

            <TextView
                android:textSize="16sp"
                android:typeface="monospace"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/roCmd" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/tableButtons"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnSubmit"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/submit"
            android:onClick="onClickSubmit" />

        <Button
            android:id="@+id/btnCancel"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:onClick="onClickCancel" />
    </LinearLayout>

    <WebView
        android:id="@+id/output"
        android:textSize="14sp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:text="" />
</LinearLayout>
